trying to assign ids to a variable

--- a/board.html
+++ b/board.html
@@ -7,29 +7,29 @@
     <title>A Board</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="board.css" />
-    <script src="main.js"></script>
 </head>
 
 <body>
     <h1>Tic Tac Toe</h1>
     <table>
         <tr>
-            <td class="r1"></td>
-            <td class="r1 c2"></td>
-            <td class="r1"></td>
+            <td class="square r1" id="1"></td>
+            <td class="square r1 c2" id ="2"></td>
+            <td class="square r1" id="3"></td>
         </tr>
         <tr>
-            <td class="r2"></td>
-            <td class="r2 c2"></td>
-            <td class="r2" ></td>
+            <td class="square r2" id="4"></td>
+            <td class="square r2 c2" id="5"></td>
+            <td class="square r2" id="6" ></td>
         </tr>
         <tr>
-            <td></td>
-            <td class="c2"></td>
-            <td ></td>
+            <td class="square" id="7"></td>
+            <td class="square c2" id="8"></td>
+            <td class="square" id="9"></td>
         </tr>
     </table>
 
+    <script src="game.js"></script>
 </body>
 
 </html>
