changed id names, because numbers were causing errors

--- a/board.html
+++ b/board.html
@@ -13,19 +13,19 @@
     <h1>Tic Tac Toe</h1>
     <table>
         <tr>
-            <td class="square r1" id="1"></td>
-            <td class="square r1 c2" id ="2"></td>
-            <td class="square r1" id="3"></td>
+            <td class="square r1" id="s1"></td>
+            <td class="square r1 c2" id ="s2"></td>
+            <td class="square r1" id="s3"></td>
         </tr>
         <tr>
-            <td class="square r2" id="4"></td>
-            <td class="square r2 c2" id="5"></td>
-            <td class="square r2" id="6" ></td>
+            <td class="square r2" id="s4"></td>
+            <td class="square r2 c2" id="s5"></td>
+            <td class="square r2" id="s6" ></td>
         </tr>
         <tr>
-            <td class="square" id="7"></td>
-            <td class="square c2" id="8"></td>
-            <td class="square" id="9"></td>
+            <td class="square" id="s7"></td>
+            <td class="square c2" id="s8"></td>
+            <td class="square" id="s9"></td>
         </tr>
     </table>
 
