--- a/board.html
+++ b/board.html
@@ -11,7 +11,6 @@
 
 <body>
     <h1>Tic Tac Toe</h1>
-    <button onclick="clearBoard()" id="reset">Reset</button>
     <table>
         <tr>
             <td class="square r1" id="s1"></td>
@@ -29,6 +28,9 @@
             <td class="square" id="s9"></td>
         </tr>
     </table>
+    <div>
+    <button onclick="clearBoard()" id="reset">Restart Game</button>
+    </div>
 
     <script src="game.js"></script>
 </body>
