--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Tic Tac Toe</h1>
+    <p class="status"></p>
     <table>
         <tr>
             <td class="square r1" id="s1"></td>
