--- a/board.html
+++ b/board.html
@@ -11,17 +11,17 @@
 
 <body>
     <h1>Tic Tac Toe</h1>
-    <p class="status"></p>
+    <p id="status"></p>
     <table>
         <tr>
             <td class="square r1" id="s1"></td>
-            <td class="square r1 c2" id ="s2"></td>
+            <td class="square r1 c2" id="s2"></td>
             <td class="square r1" id="s3"></td>
         </tr>
         <tr>
             <td class="square r2" id="s4"></td>
             <td class="square r2 c2" id="s5"></td>
-            <td class="square r2" id="s6" ></td>
+            <td class="square r2" id="s6"></td>
         </tr>
         <tr>
             <td class="square" id="s7"></td>
@@ -30,7 +30,7 @@
         </tr>
     </table>
     <div>
-    <button onclick="clearBoard()" id="reset">Restart Game</button>
+        <button onclick="clearBoard()" id="reset">Restart Game</button>
     </div>
 
     <script src="game.js"></script>
