--- a/board.html
+++ b/board.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Tic Tac Toe</h1>
-    <p id="status"></p>
+    <p id="status">Play First</p>
     <table>
         <tr>
             <td class="square r1" id="s1"></td>
